; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartest.c_convert_str.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartest.c_convert_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32 }

@CP_ACP = common dso_local global i32 0, align 4
@FAILDIG = common dso_local global i32 0, align 4
@LOCALE_NOUSEROVERRIDE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, %struct.TYPE_8__*, %struct.TYPE_8__*, i32)* @convert_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_str(i8* %0, i32 %1, i32 %2, %struct.TYPE_8__* %3, %struct.TYPE_8__* %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_8__*, align 8
  %11 = alloca %struct.TYPE_8__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca [128 x i32], align 16
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store %struct.TYPE_8__* %3, %struct.TYPE_8__** %10, align 8
  store %struct.TYPE_8__* %4, %struct.TYPE_8__** %11, align 8
  store i32 %5, i32* %12, align 4
  %14 = load i32, i32* @CP_ACP, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = getelementptr inbounds [128 x i32], [128 x i32]* %13, i64 0, i64 0
  %17 = getelementptr inbounds [128 x i32], [128 x i32]* %13, i64 0, i64 0
  %18 = call i32 @ARRAY_SIZE(i32* %17)
  %19 = call i32 @MultiByteToWideChar(i32 %14, i32 0, i8* %15, i32 -1, i32* %16, i32 %18)
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %21 = load i32, i32* @FAILDIG, align 4
  %22 = call i32 @memset(%struct.TYPE_8__* %20, i32 %21, i32 128)
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %24 = call i32 @memset(%struct.TYPE_8__* %23, i32 255, i32 8)
  %25 = load i32, i32* %8, align 4
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  %28 = load i32, i32* %9, align 4
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  %31 = getelementptr inbounds [128 x i32], [128 x i32]* %13, i64 0, i64 0
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* @LOCALE_NOUSEROVERRIDE, align 4
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %36 = call i32 @pVarParseNumFromStr(i32* %31, i32 %32, i32 %33, %struct.TYPE_8__* %34, %struct.TYPE_8__* %35)
  ret i32 %36
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @memset(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @pVarParseNumFromStr(i32*, i32, i32, %struct.TYPE_8__*, %struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
